# SaveCheck

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
public/: brochures.js  data.js  header-preview.html  hook-preview.html  index.html  logo-preview.html  manifest.webmanifest
scripts/: gen_brochures.py  gen_demo_data.py
src/savecheck/: config.py  db.py  models.py  schema.sql
src/savecheck/api/: __init__.py  main.py
src/savecheck/ingest/: __init__.py  kolkostruva.py
src/savecheck/pricing/: __init__.py  aggregates.py  alerts.py  history.py  verdict.py
src/savecheck/shopping/: __init__.py  inventory.py  shopping_list.py  staples.py
src/savecheck/vision/: __init__.py  recognize.py
tests/: test_aggregates.py  test_alerts.py  test_history.py  test_ingest_parser.py  test_shopping_list.py  test_verdict.py
