[project]
name = "savecheck"
version = "0.1.0"
description = "Price-history truth check for grocery promotions (Bulgarian market)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# The pricing core (savecheck.pricing) is pure stdlib and needs nothing here.
# These extras are only for the persistence + ingestion + API layers.
db = [
    "SQLAlchemy>=2.0",
    "psycopg[binary]>=3.1",
]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
ingest = [
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
